resources/app-sre/try-openshift-com-prod/try-openshift-com.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: try-openshift-com
spec:
  host: try.openshift.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: try-openshift-com
    weight: 100
  wildcardPolicy: None
